// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Roster functionality can load Scoreboard with scoringPeriodId from class 1`] = `
Roster {
  "leagueId": 336358,
  "players": Array [
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Tom",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Brady",
        "leagueId": 336358,
        "percentOwned": 99.80315,
        "percentOwnedChange": 0.20315,
        "percentStarted": 81.69291,
        "playerId": 2330,
        "seasonId": 2017,
      },
      "position": "QB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "DeMarco",
        "isActive": true,
        "isIREligible": false,
        "lastName": "Murray",
        "leagueId": 336358,
        "percentOwned": 90.11494,
        "percentOwnedChange": 0.51317,
        "percentStarted": 27.35632,
        "playerId": 14005,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Todd",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "30",
        "lastName": "Gurley II",
        "leagueId": 336358,
        "percentOwned": 98.57143,
        "percentOwnedChange": -0.06803,
        "percentStarted": 90.15873,
        "playerId": 17683,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Golden",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Tate",
        "leagueId": 336358,
        "percentOwned": 95.61404,
        "percentOwnedChange": 0.53574,
        "percentStarted": 60.74561,
        "playerId": 13217,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Adam",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Thielen",
        "leagueId": 336358,
        "percentOwned": 96.88073,
        "percentOwnedChange": -0.06842,
        "percentStarted": 82.20183,
        "playerId": 17178,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Zach",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "86",
        "lastName": "Ertz",
        "leagueId": 336358,
        "percentOwned": 97.42647,
        "percentOwnedChange": -0.20386,
        "percentStarted": 83.08824,
        "playerId": 15835,
        "seasonId": 2017,
      },
      "position": "TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tyreek",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "10",
        "lastName": "Hill",
        "leagueId": 336358,
        "percentOwned": 95.94156,
        "percentOwnedChange": -0.11107,
        "percentStarted": 72.56494,
        "playerId": 17929,
        "seasonId": 2017,
      },
      "position": "RB/WR/TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "D/ST",
          "Bench",
        ],
        "firstName": "Chiefs",
        "isActive": true,
        "isIREligible": false,
        "lastName": "D/ST",
        "leagueId": 336358,
        "percentOwned": 54.1555,
        "percentOwnedChange": 1.88277,
        "percentStarted": 35.38874,
        "playerId": 60012,
        "seasonId": 2017,
      },
      "position": "D/ST",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Stephen",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "3",
        "lastName": "Gostkowski",
        "leagueId": 336358,
        "percentOwned": 98.5258,
        "percentOwnedChange": -0.26452,
        "percentStarted": 87.22359,
        "playerId": 9704,
        "seasonId": 2017,
      },
      "position": "K",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "David",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "31",
        "lastName": "Johnson",
        "leagueId": 336358,
        "percentOwned": 71.38365,
        "percentOwnedChange": 0.89345,
        "percentStarted": 51.67715,
        "playerId": 17442,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "C.J.",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "22",
        "lastName": "Anderson",
        "leagueId": 336358,
        "percentOwned": 84.43114,
        "percentOwnedChange": 0.59655,
        "percentStarted": 30.33932,
        "playerId": 16040,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Kyle",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "82",
        "lastName": "Rudolph",
        "leagueId": 336358,
        "percentOwned": 90.86957,
        "percentOwnedChange": 0.18131,
        "percentStarted": 59.56522,
        "playerId": 14054,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Will",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Fuller V",
        "leagueId": 336358,
        "percentOwned": 56.69824,
        "percentOwnedChange": 2.42363,
        "percentStarted": 15.96752,
        "playerId": 17809,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Harrison",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "7",
        "lastName": "Butker",
        "leagueId": 336358,
        "percentOwned": 59.9297,
        "percentOwnedChange": 1.14481,
        "percentStarted": 49.56063,
        "playerId": 18409,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "James",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "28",
        "lastName": "White",
        "leagueId": 336358,
        "percentOwned": 55.48523,
        "percentOwnedChange": 2.65122,
        "percentStarted": 8.22785,
        "playerId": 16913,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Matthew",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "9",
        "lastName": "Stafford",
        "leagueId": 336358,
        "percentOwned": 90.16787,
        "percentOwnedChange": -0.79599,
        "percentStarted": 51.55875,
        "playerId": 12483,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
  ],
  "scoringPeriodId": 11,
  "seasonId": 2017,
  "team": Team {
    "abbreviation": "��",
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionStanding": 2,
    "firstName": "2 Gurleys",
    "lastName": "One Cup",
    "leagueId": 336358,
    "leagueStanding": 3,
    "logoURL": "http://i.imgur.com/C17g1Af.gif",
    "seasonId": 2017,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "waiverRank": 2,
  },
  "teamId": 9,
}
`;

exports[`Roster functionality can load Scoreboard with scoringPeriodId from instance 1`] = `
Roster {
  "leagueId": 336358,
  "players": Array [
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Tom",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Brady",
        "leagueId": 336358,
        "percentOwned": 99.80315,
        "percentOwnedChange": 0.20315,
        "percentStarted": 81.69291,
        "playerId": 2330,
        "seasonId": 2017,
      },
      "position": "QB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "DeMarco",
        "isActive": true,
        "isIREligible": false,
        "lastName": "Murray",
        "leagueId": 336358,
        "percentOwned": 90.11494,
        "percentOwnedChange": 0.51317,
        "percentStarted": 27.35632,
        "playerId": 14005,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Todd",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "30",
        "lastName": "Gurley II",
        "leagueId": 336358,
        "percentOwned": 98.57143,
        "percentOwnedChange": -0.06803,
        "percentStarted": 90.15873,
        "playerId": 17683,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Golden",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Tate",
        "leagueId": 336358,
        "percentOwned": 95.61404,
        "percentOwnedChange": 0.53574,
        "percentStarted": 60.74561,
        "playerId": 13217,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Adam",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Thielen",
        "leagueId": 336358,
        "percentOwned": 96.88073,
        "percentOwnedChange": -0.06842,
        "percentStarted": 82.20183,
        "playerId": 17178,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Zach",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "86",
        "lastName": "Ertz",
        "leagueId": 336358,
        "percentOwned": 97.42647,
        "percentOwnedChange": -0.20386,
        "percentStarted": 83.08824,
        "playerId": 15835,
        "seasonId": 2017,
      },
      "position": "TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tyreek",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "10",
        "lastName": "Hill",
        "leagueId": 336358,
        "percentOwned": 95.94156,
        "percentOwnedChange": -0.11107,
        "percentStarted": 72.56494,
        "playerId": 17929,
        "seasonId": 2017,
      },
      "position": "RB/WR/TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "D/ST",
          "Bench",
        ],
        "firstName": "Chiefs",
        "isActive": true,
        "isIREligible": false,
        "lastName": "D/ST",
        "leagueId": 336358,
        "percentOwned": 54.1555,
        "percentOwnedChange": 1.88277,
        "percentStarted": 35.38874,
        "playerId": 60012,
        "seasonId": 2017,
      },
      "position": "D/ST",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Stephen",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "3",
        "lastName": "Gostkowski",
        "leagueId": 336358,
        "percentOwned": 98.5258,
        "percentOwnedChange": -0.26452,
        "percentStarted": 87.22359,
        "playerId": 9704,
        "seasonId": 2017,
      },
      "position": "K",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "David",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "31",
        "lastName": "Johnson",
        "leagueId": 336358,
        "percentOwned": 71.38365,
        "percentOwnedChange": 0.89345,
        "percentStarted": 51.67715,
        "playerId": 17442,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "C.J.",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "22",
        "lastName": "Anderson",
        "leagueId": 336358,
        "percentOwned": 84.43114,
        "percentOwnedChange": 0.59655,
        "percentStarted": 30.33932,
        "playerId": 16040,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Kyle",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "82",
        "lastName": "Rudolph",
        "leagueId": 336358,
        "percentOwned": 90.86957,
        "percentOwnedChange": 0.18131,
        "percentStarted": 59.56522,
        "playerId": 14054,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Will",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Fuller V",
        "leagueId": 336358,
        "percentOwned": 56.69824,
        "percentOwnedChange": 2.42363,
        "percentStarted": 15.96752,
        "playerId": 17809,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Harrison",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "7",
        "lastName": "Butker",
        "leagueId": 336358,
        "percentOwned": 59.9297,
        "percentOwnedChange": 1.14481,
        "percentStarted": 49.56063,
        "playerId": 18409,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "James",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "28",
        "lastName": "White",
        "leagueId": 336358,
        "percentOwned": 55.48523,
        "percentOwnedChange": 2.65122,
        "percentStarted": 8.22785,
        "playerId": 16913,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Matthew",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "9",
        "lastName": "Stafford",
        "leagueId": 336358,
        "percentOwned": 90.16787,
        "percentOwnedChange": -0.79599,
        "percentStarted": 51.55875,
        "playerId": 12483,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
  ],
  "scoringPeriodId": 11,
  "seasonId": 2017,
  "team": Team {
    "abbreviation": "��",
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionStanding": 2,
    "firstName": "2 Gurleys",
    "lastName": "One Cup",
    "leagueId": 336358,
    "leagueStanding": 3,
    "logoURL": "http://i.imgur.com/C17g1Af.gif",
    "seasonId": 2017,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "waiverRank": 2,
  },
  "teamId": 9,
}
`;

exports[`Roster functionality can load Scoreboard without scoringPeriodId from class 1`] = `
Roster {
  "leagueId": 336358,
  "players": Array [
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Tom",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Brady",
        "leagueId": 336358,
        "percentOwned": 99.80315,
        "percentOwnedChange": 0.20315,
        "percentStarted": 81.69291,
        "playerId": 2330,
        "seasonId": 2017,
      },
      "position": "QB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Jerick",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "21",
        "lastName": "McKinnon",
        "leagueId": 336358,
        "percentOwned": 87.4613,
        "percentOwnedChange": -1.08439,
        "percentStarted": 50.77399,
        "playerId": 16782,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Malcolm",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "34",
        "lastName": "Brown",
        "leagueId": 336358,
        "percentOwned": 15.63574,
        "percentOwnedChange": -0.20277,
        "percentStarted": 2.06186,
        "playerId": 17742,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Golden",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Tate",
        "leagueId": 336358,
        "percentOwned": 95.61404,
        "percentOwnedChange": 0.53574,
        "percentStarted": 60.74561,
        "playerId": 13217,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Adam",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Thielen",
        "leagueId": 336358,
        "percentOwned": 96.88073,
        "percentOwnedChange": -0.06842,
        "percentStarted": 82.20183,
        "playerId": 17178,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Kyle",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "82",
        "lastName": "Rudolph",
        "leagueId": 336358,
        "percentOwned": 90.86957,
        "percentOwnedChange": 0.18131,
        "percentStarted": 59.56522,
        "playerId": 14054,
        "seasonId": 2017,
      },
      "position": "TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Ted",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Ginn Jr.",
        "leagueId": 336358,
        "percentOwned": 47.53363,
        "percentOwnedChange": -1.37726,
        "percentStarted": 8.07175,
        "playerId": 10453,
        "seasonId": 2017,
      },
      "position": "RB/WR/TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "D/ST",
          "Bench",
        ],
        "firstName": "Patriots",
        "isActive": true,
        "isIREligible": false,
        "lastName": "D/ST",
        "leagueId": 336358,
        "percentOwned": 56.66667,
        "percentOwnedChange": 0.65644,
        "percentStarted": 33.88889,
        "playerId": 60017,
        "seasonId": 2017,
      },
      "position": "D/ST",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Stephen",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "3",
        "lastName": "Gostkowski",
        "leagueId": 336358,
        "percentOwned": 98.5258,
        "percentOwnedChange": -0.26452,
        "percentStarted": 87.22359,
        "playerId": 9704,
        "seasonId": 2017,
      },
      "position": "K",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Todd",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "30",
        "lastName": "Gurley II",
        "leagueId": 336358,
        "percentOwned": 98.57143,
        "percentOwnedChange": -0.06803,
        "percentStarted": 90.15873,
        "playerId": 17683,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tyreek",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "10",
        "lastName": "Hill",
        "leagueId": 336358,
        "percentOwned": 95.94156,
        "percentOwnedChange": -0.11107,
        "percentStarted": 72.56494,
        "playerId": 17929,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Zach",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "86",
        "lastName": "Ertz",
        "leagueId": 336358,
        "percentOwned": 97.42647,
        "percentOwnedChange": -0.20386,
        "percentStarted": 83.08824,
        "playerId": 15835,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Harrison",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "7",
        "lastName": "Butker",
        "leagueId": 336358,
        "percentOwned": 59.9297,
        "percentOwnedChange": 1.14481,
        "percentStarted": 49.56063,
        "playerId": 18409,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Matthew",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "9",
        "lastName": "Stafford",
        "leagueId": 336358,
        "percentOwned": 90.16787,
        "percentOwnedChange": -0.79599,
        "percentStarted": 51.55875,
        "playerId": 12483,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Jonathan",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "28",
        "lastName": "Stewart",
        "leagueId": 336358,
        "percentOwned": 58.45411,
        "percentOwnedChange": -0.24155,
        "percentStarted": 12.31884,
        "playerId": 11247,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "position": "Bench",
    },
  ],
  "scoringPeriodId": undefined,
  "seasonId": 2017,
  "team": Team {
    "abbreviation": "��",
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionStanding": 2,
    "firstName": "2 Gurleys",
    "lastName": "One Cup",
    "leagueId": 336358,
    "leagueStanding": 3,
    "logoURL": "http://i.imgur.com/C17g1Af.gif",
    "seasonId": 2017,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "waiverRank": 2,
  },
  "teamId": 9,
}
`;

exports[`Roster functionality can load Scoreboard without scoringPeriodId from instance 1`] = `
Roster {
  "leagueId": 336358,
  "players": Array [
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Tom",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Brady",
        "leagueId": 336358,
        "percentOwned": 99.80315,
        "percentOwnedChange": 0.20315,
        "percentStarted": 81.69291,
        "playerId": 2330,
        "seasonId": 2017,
      },
      "position": "QB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Jerick",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "21",
        "lastName": "McKinnon",
        "leagueId": 336358,
        "percentOwned": 87.4613,
        "percentOwnedChange": -1.08439,
        "percentStarted": 50.77399,
        "playerId": 16782,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Malcolm",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "34",
        "lastName": "Brown",
        "leagueId": 336358,
        "percentOwned": 15.63574,
        "percentOwnedChange": -0.20277,
        "percentStarted": 2.06186,
        "playerId": 17742,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Golden",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Tate",
        "leagueId": 336358,
        "percentOwned": 95.61404,
        "percentOwnedChange": 0.53574,
        "percentStarted": 60.74561,
        "playerId": 13217,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Adam",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Thielen",
        "leagueId": 336358,
        "percentOwned": 96.88073,
        "percentOwnedChange": -0.06842,
        "percentStarted": 82.20183,
        "playerId": 17178,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Kyle",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "82",
        "lastName": "Rudolph",
        "leagueId": 336358,
        "percentOwned": 90.86957,
        "percentOwnedChange": 0.18131,
        "percentStarted": 59.56522,
        "playerId": 14054,
        "seasonId": 2017,
      },
      "position": "TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Ted",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Ginn Jr.",
        "leagueId": 336358,
        "percentOwned": 47.53363,
        "percentOwnedChange": -1.37726,
        "percentStarted": 8.07175,
        "playerId": 10453,
        "seasonId": 2017,
      },
      "position": "RB/WR/TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "D/ST",
          "Bench",
        ],
        "firstName": "Patriots",
        "isActive": true,
        "isIREligible": false,
        "lastName": "D/ST",
        "leagueId": 336358,
        "percentOwned": 56.66667,
        "percentOwnedChange": 0.65644,
        "percentStarted": 33.88889,
        "playerId": 60017,
        "seasonId": 2017,
      },
      "position": "D/ST",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Stephen",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "3",
        "lastName": "Gostkowski",
        "leagueId": 336358,
        "percentOwned": 98.5258,
        "percentOwnedChange": -0.26452,
        "percentStarted": 87.22359,
        "playerId": 9704,
        "seasonId": 2017,
      },
      "position": "K",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Todd",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "30",
        "lastName": "Gurley II",
        "leagueId": 336358,
        "percentOwned": 98.57143,
        "percentOwnedChange": -0.06803,
        "percentStarted": 90.15873,
        "playerId": 17683,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tyreek",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "10",
        "lastName": "Hill",
        "leagueId": 336358,
        "percentOwned": 95.94156,
        "percentOwnedChange": -0.11107,
        "percentStarted": 72.56494,
        "playerId": 17929,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Zach",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "86",
        "lastName": "Ertz",
        "leagueId": 336358,
        "percentOwned": 97.42647,
        "percentOwnedChange": -0.20386,
        "percentStarted": 83.08824,
        "playerId": 15835,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Harrison",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "7",
        "lastName": "Butker",
        "leagueId": 336358,
        "percentOwned": 59.9297,
        "percentOwnedChange": 1.14481,
        "percentStarted": 49.56063,
        "playerId": 18409,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Matthew",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "9",
        "lastName": "Stafford",
        "leagueId": 336358,
        "percentOwned": 90.16787,
        "percentOwnedChange": -0.79599,
        "percentStarted": 51.55875,
        "playerId": 12483,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Jonathan",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "28",
        "lastName": "Stewart",
        "leagueId": 336358,
        "percentOwned": 58.45411,
        "percentOwnedChange": -0.24155,
        "percentStarted": 12.31884,
        "playerId": 11247,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "position": "Bench",
    },
  ],
  "scoringPeriodId": undefined,
  "seasonId": 2017,
  "team": Team {
    "abbreviation": "��",
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionStanding": 2,
    "firstName": "2 Gurleys",
    "lastName": "One Cup",
    "leagueId": 336358,
    "leagueStanding": 3,
    "logoURL": "http://i.imgur.com/C17g1Af.gif",
    "seasonId": 2017,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "waiverRank": 2,
  },
  "teamId": 9,
}
`;

exports[`Roster functionality loads Roster on non-reloads when there is not a cached Roster 1`] = `
Roster {
  "leagueId": 336358,
  "players": Array [
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Tom",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Brady",
        "leagueId": 336358,
        "percentOwned": 99.80315,
        "percentOwnedChange": 0.20315,
        "percentStarted": 81.69291,
        "playerId": 2330,
        "seasonId": 2017,
      },
      "position": "QB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Todd",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "30",
        "lastName": "Gurley II",
        "leagueId": 336358,
        "percentOwned": 98.57143,
        "percentOwnedChange": -0.06803,
        "percentStarted": 90.15873,
        "playerId": 17683,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Dalvin",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "33",
        "lastName": "Cook",
        "leagueId": 336358,
        "percentOwned": 57.44681,
        "percentOwnedChange": -0.29454,
        "percentStarted": 35.66363,
        "playerId": 18260,
        "seasonId": 2017,
      },
      "position": "RB",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tyreek",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "10",
        "lastName": "Hill",
        "leagueId": 336358,
        "percentOwned": 95.94156,
        "percentOwnedChange": -0.11107,
        "percentStarted": 72.56494,
        "playerId": 17929,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Golden",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "15",
        "lastName": "Tate",
        "leagueId": 336358,
        "percentOwned": 95.61404,
        "percentOwnedChange": 0.53574,
        "percentStarted": 60.74561,
        "playerId": 13217,
        "seasonId": 2017,
      },
      "position": "WR",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Zach",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "86",
        "lastName": "Ertz",
        "leagueId": 336358,
        "percentOwned": 97.42647,
        "percentOwnedChange": -0.20386,
        "percentStarted": 83.08824,
        "playerId": 15835,
        "seasonId": 2017,
      },
      "position": "TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "C.J.",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "22",
        "lastName": "Anderson",
        "leagueId": 336358,
        "percentOwned": 84.43114,
        "percentOwnedChange": 0.59655,
        "percentStarted": 30.33932,
        "playerId": 16040,
        "seasonId": 2017,
      },
      "position": "RB/WR/TE",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "D/ST",
          "Bench",
        ],
        "firstName": "Packers",
        "isActive": true,
        "isIREligible": false,
        "lastName": "D/ST",
        "leagueId": 336358,
        "percentOwned": 14.77046,
        "percentOwnedChange": 0.40682,
        "percentStarted": 6.18762,
        "playerId": 60009,
        "seasonId": 2017,
      },
      "position": "D/ST",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Justin",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "9",
        "lastName": "Tucker",
        "leagueId": 336358,
        "percentOwned": 91.95652,
        "percentOwnedChange": 0.27295,
        "percentStarted": 81.73913,
        "playerId": 15683,
        "seasonId": 2017,
      },
      "position": "K",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "David",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "31",
        "lastName": "Johnson",
        "leagueId": 336358,
        "percentOwned": 71.38365,
        "percentOwnedChange": 0.89345,
        "percentStarted": 51.67715,
        "playerId": 17442,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "DeMarco",
        "isActive": true,
        "isIREligible": false,
        "lastName": "Murray",
        "leagueId": 336358,
        "percentOwned": 90.11494,
        "percentOwnedChange": 0.51317,
        "percentStarted": 27.35632,
        "playerId": 14005,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Kyle",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "82",
        "lastName": "Rudolph",
        "leagueId": 336358,
        "percentOwned": 90.86957,
        "percentOwnedChange": 0.18131,
        "percentStarted": 59.56522,
        "playerId": 14054,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Jamaal",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "28",
        "lastName": "Charles",
        "leagueId": 336358,
        "percentOwned": 14.90909,
        "percentOwnedChange": 1.48627,
        "percentStarted": 0.72727,
        "playerId": 11307,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Adam",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Thielen",
        "leagueId": 336358,
        "percentOwned": 96.88073,
        "percentOwnedChange": -0.06842,
        "percentStarted": 82.20183,
        "playerId": 17178,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "J.J.",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "14",
        "lastName": "Nelson",
        "leagueId": 336358,
        "percentOwned": 13.12057,
        "percentOwnedChange": -2.34818,
        "percentStarted": 0.1773,
        "playerId": 17514,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
    SlottedPlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Sammy",
        "isActive": true,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Watkins",
        "leagueId": 336358,
        "percentOwned": 80.82192,
        "percentOwnedChange": 0.69371,
        "percentStarted": 32.36301,
        "playerId": 16725,
        "seasonId": 2017,
      },
      "position": "Bench",
    },
  ],
  "scoringPeriodId": 4,
  "seasonId": 2017,
  "team": Team {
    "abbreviation": "��",
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionStanding": 2,
    "firstName": "2 Gurleys",
    "lastName": "One Cup",
    "leagueId": 336358,
    "leagueStanding": 3,
    "logoURL": "http://i.imgur.com/C17g1Af.gif",
    "seasonId": 2017,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "waiverRank": 2,
  },
  "teamId": 9,
}
`;
